@@ -1,3 +1,8 @@
+2005-06-13  Tristan Tarrant <nadir@users.sourceforge.net>
+	* mouse.h: include gamewin.h
+	* audio/midi_drivers/Makefile.am: add include path so it can find flags.h
+	* audio/midi_drivers/XMidiFile.cpp: make it compile on 64bit
+
 2005-06-12  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* data/bg/faces2.shp: new Sentri face by Berty Zhang
 
